syntax = "proto3";
package message;

//服务器类型
enum SERVICE{
    NONE= 0;
    CLIENT= 1;
    GATESERVER= 2;//网关,转发服务
    ACCOUNTSERVER=3;//账号
    WORLDSERVER=4;//世界
    ZONESERVER=5;//地图
    WORLDDBSERVER=6;//db
};

enum CHAT{
    MSG_TYPE_WORLD= 0;
    MSG_TYPE_PRIVATE= 1;
    MSG_TYPE_ORG= 2;
    MSG_TYPE_COUNT= 3;
};

//发送标志
enum SEND{
    POINT = 0;//指定集群id
    BALANCE = 1;//负载
    BOARD_CAST = 2;//广播
};

//客户端包头
message Ipacket{
    int32  Stx = 1;
    SERVICE  DestServerType = 2;
    int32  Ckx = 3;
    int64  Id = 4;
}

message PlayerData{
    int64 PlayerID = 1;
    string PlayerName = 2;
    int32 PlayerGold = 3;
}

//rpc 包头
message RpcHead{
    int64  Id = 1;//token
    uint32  SocketId = 2;
    uint32  SrcClusterId = 3;//源集群id
    uint32  ClusterId = 4;//目标集群id
    SERVICE  DestServerType = 5;//目标集群
    SEND SendType = 6;
    string ActorName = 7;
}

//rpc 包
message RpcPacket{
    string FuncName = 1;
    int32 ArgLen = 2;
    RpcHead RpcHead = 3;
    bytes RpcBody = 4;
}

//集群信息
message ClusterInfo{
    SERVICE Type = 1;
    string Ip = 2;
    int32 Port = 3;
    int32 Weight = 4;
    uint32 SocketId = 5;
}